# taiko-midi-controller

./: Cargo.toml  flake.nix  openocd.gdb
.cargo/: config.toml
src/: main.rs  midi.rs  xinput.rs
