[package]
name = "taiko-midi-controller"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A MIDI controller for the Taiko no Tatsujin drum controller"

[[bin]]
name = "taiko-midi-controller"
test = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["device"] }
defmt = { version = "0.3.10", features = ["encoding-raw"] }
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-stm32 = { version = "0.2.0", features = [
    "defmt",
    "memory-x",
    "stm32f103c8",
    "time-driver-any",
] }
embassy-time = "0.4.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103"] }

[profile.release]
lto = true
strip = true
